--- a/GrapeRoule/GrapeRouleServer/Server/Server.csproj
+++ b/GrapeRoule/GrapeRouleServer/Server/Server.csproj
@@ -34,6 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SqlFuncs, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SqlFuncs\SqlFuncs\bin\Debug\SqlFuncs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
